fixed content-nav issue. z-index was hiding nav buttons behind content-box. Now the shadows are wrong, but the buttons work

--- a/css/skills.css
+++ b/css/skills.css
@@ -12,7 +12,6 @@ button {
   grid-area: content-nav;
   padding: .25rem;
   background-color: #a3b59f;
-  z-index: -1;
 }
 
 #content-nav-items {
